add new feature and deprecated